--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -65,7 +65,7 @@
             <div class="loading-txt">
                 This app has been stopped, you can now close this tab.<br><br>
                 <span class="refreshButton">
-				<button class="btn btn-default btn-restart-app"
+				<button class="btn btn-default app-restart-btn"
                         onClick="Shiny.instances.eventHandlers.onRestartInstance()">Restart app</button>
 			</span>
             </div>
@@ -74,7 +74,7 @@
             <div class="loading-txt">
                 This app has been paused, you can now close this tab.<br><br>
                 <span class="refreshButton">
-				<button class="btn btn-default btn-restart-app"
+				<button class="btn btn-default app-restart-btn"
                         onClick="Shiny.instances.eventHandlers.onRestartInstance()">Resume app</button>
 			</span>
             </div>
@@ -113,7 +113,7 @@
             <div class="loading-txt">
                 This app has crashed and has been stopped.<br><br>
                 <span class="refreshButton">
-				<button class="btn btn-default btn-restart-app"
+				<button class="btn btn-default app-restart-btn"
                         onClick="Shiny.instances.eventHandlers.onRestartInstance()">Restart app</button>
 			</span>
             </div>
