--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -44,28 +44,26 @@
                             <a class="btn btn-primary btn-sm" role="button" data-toggle="collapse" data-target="#navbar-collapse" id="switchInstancesModal-btn"
                                th:if="${page == 'app' && appMaxInstances.get(appName) != 1}">Switch instance</a>
 
-                            <a class="btn btn-primary btn-sm app-restart-btn"
-                               onclick="Shiny.instances.eventHandlers.showAppDetails();"
+                            <a class="btn btn-primary btn-sm app-details-current-btn"
                                role="button" data-toggle="collapse" data-target="#navbar-collapse"
                                th:if="${page == 'app' && appMaxInstances.get(appName) == 1}">App details</a>
 
                             <a class="btn btn-primary btn-sm app-restart-btn"
-                               onclick="Shiny.instances.eventHandlers.onRestartInstance();"
                                role="button" data-toggle="collapse" data-target="#navbar-collapse"
                                th:if="${page == 'app' && appMaxInstances.get(appName) == 1}">Restart app</a>
 
-                            <a class="btn btn-primary btn-sm" onclick="Shiny.instances.eventHandlers.onStopApp();"
-                               role="button" data-toggle="collapse" data-target="#navbar-collapse"
+                            <a class="btn btn-primary btn-sm app-stop-current-btn"
+                               role="button"
                                th:if="${page == 'app' && appMaxInstances.get(appName) == 1}">Stop app</a>
 
-                            <a class="btn btn-primary btn-sm" onclick="Shiny.instances.eventHandlers.onPauseApp();"
+                            <a class="btn btn-primary btn-sm app-pause-current-btn"
                                role="button" data-toggle="collapse" data-target="#navbar-collapse"
                                th:if="${page == 'app' && pauseSupported && appMaxInstances.get(appName) == 1}">Pause app</a>
 
                             <a class="btn btn-primary btn-sm" id="myAppsModal-btn" role="button" data-toggle="collapse" data-target="#navbar-collapse"
                                th:if="${page == 'index' && myAppsMode == 'Modal'}">My apps</a>
 
-                            <a class="btn btn-primary btn-sm" role="button" th:if="${isSupportEnabled}" data-toggle="collapse" data-target="#navbar-collapse" onclick="Shiny.ui.showReportIssueModal();">Report Issue</a>
+                            <a class="btn btn-primary btn-sm report-issue-btn" role="button" th:if="${isSupportEnabled}" data-toggle="collapse" data-target="#navbar-collapse">Report Issue</a>
                             <a class="btn btn-primary btn-sm" role="button" th:href="@{/admin}" th:if="${isAdmin}">Admin</a>
                             <a class="btn btn-primary btn-sm" role="button" th:href="@{${logoutUrl}}" th:if="${isLoggedIn}">Sign
                                 Out</a>
