--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -41,15 +41,15 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navbar-collapse">
                         <div class="navbar-form navbar-right navbar-buttons">
-                            <a class="btn btn-primary btn-sm" role="button" data-toggle="collapse" data-target="#navbar-collapse" id="switchInstancesModal-btn"
+                            <a class="btn btn-primary btn-sm" role="button" id="switchInstancesModal-btn"
                                th:if="${page == 'app' && appMaxInstances.get(appName) != 1}">Switch instance</a>
 
                             <a class="btn btn-primary btn-sm app-details-current-btn"
-                               role="button" data-toggle="collapse" data-target="#navbar-collapse"
+                               role="button"
                                th:if="${page == 'app' && appMaxInstances.get(appName) == 1}">App details</a>
 
                             <a class="btn btn-primary btn-sm app-restart-btn"
-                               role="button" data-toggle="collapse" data-target="#navbar-collapse"
+                               role="button"
                                th:if="${page == 'app' && appMaxInstances.get(appName) == 1}">Restart app</a>
 
                             <a class="btn btn-primary btn-sm app-stop-current-btn"
@@ -57,13 +57,13 @@
                                th:if="${page == 'app' && appMaxInstances.get(appName) == 1}">Stop app</a>
 
                             <a class="btn btn-primary btn-sm app-pause-current-btn"
-                               role="button" data-toggle="collapse" data-target="#navbar-collapse"
+                               role="button"
                                th:if="${page == 'app' && pauseSupported && appMaxInstances.get(appName) == 1}">Pause app</a>
 
-                            <a class="btn btn-primary btn-sm" id="myAppsModal-btn" role="button" data-toggle="collapse" data-target="#navbar-collapse"
+                            <a class="btn btn-primary btn-sm" id="myAppsModal-btn" role="button"
                                th:if="${page == 'index' && myAppsMode == 'Modal'}">My apps</a>
 
-                            <a class="btn btn-primary btn-sm report-issue-btn" role="button" th:if="${isSupportEnabled}" data-toggle="collapse" data-target="#navbar-collapse">Report Issue</a>
+                            <a class="btn btn-primary btn-sm report-issue-btn" role="button" th:if="${isSupportEnabled}">Report Issue</a>
                             <a class="btn btn-primary btn-sm" role="button" th:href="@{/admin}" th:if="${isAdmin}">Admin</a>
                             <a class="btn btn-primary btn-sm" role="button" th:href="@{${logoutUrl}}" th:if="${isLoggedIn}">Sign
                                 Out</a>
